<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="title_activity_tip_calculator">Tip Calculator</string>
    <string name="menu_settings">Settings</string>

    <string name="bill_amount_label">Bill Amount</string>
    <string name="bill_amount"></string>

    <string name="tip_percent_label">Percent</string>
    <string name="tip_percent">15%</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    
    <string name="tip_amount_label">Tip</string>
    <string name="tip_amount">$0.00</string>

    <string name="total_amount_label">Total</string>
    <string name="total_amount">$0.00</string>
    <string name="applyButton">Apply</string>
    <string name="separatorLabel">_______________________________________________________</string>
    <string name="noneRoundingRadioButton">None</string>
    <string name="tipRoundingRadioButton">Tip</string>
    <string name="totalRoundingRadioButton">Total</string>
    <string name="splitBillLabel">Split Bill:</string>
    <string name="perPersonLabel">Per Person:</string>
    <string name="roundingLabel">Rounding:</string>

    <string-array name="split_array">
        <item>Split the bill? - No</item>
        <item>Split the bill? - 2 Ways</item>
        <item>Split the bill? - 3 Ways</item>
        <item>Split the bill? - 4 Ways</item>
    </string-array>
</resources>